# thirtyfour

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  MIGRATION.md  rustfmt.toml  todo.md
.github/workflows/: audit-check.yml  bidi-test.yml  cdp-test.yml  coverage.yml  features.yml  manager-test.yml  mdbook.yml  minimal.yml  msrv.yml  style.yml  test.yml
ci/: macos-latest-chrome  macos-latest-firefox  ubuntu-latest-chrome  ubuntu-latest-firefox  windows-latest-chrome.ps1  windows-latest-firefox.ps1
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  llms-full.txt  llms.txt
docs/src/appendix/: manual-webdriver.md
docs/src/bidi/: events.md  overview.md
docs/src/cdp/: events.md  overview.md
docs/src/contributing/: testing.md
docs/src/features/: components.md  manager.md  queries.md  waiting.md
docs/src/getting-started/: ai-quickstart.md  explaining-the-code.md  feature-flags.md  first-code.md  installation.md  reliable-tests.md
docs/src/recipes/: browser-contexts.md  browser-protocols.md  diagnostics.md  forms-and-content.md  index.md
docs/src/tools/: selenium-playwright.md
specs/: README.md  ai-friendly-browser-automation.md
thirtyfour/: Cargo.toml  README.md
thirtyfour-macros/: Cargo.toml  README.md
thirtyfour-macros/src/: component.rs  lib.rs
thirtyfour/examples/: bidi_basic.rs  bidi_log_events.rs  bidi_network_intercept.rs  chrome_devtools.rs  chrome_options.rs  driver_logging.rs  firefox_preferences.rs  minimal_async.rs  remote_debugging.rs  selenium_example.rs  shadowroot.rs  tokio_async.rs  tokio_basic.rs
thirtyfour/examples/components/: playground.rs
thirtyfour/examples/query/: custom_poller.rs  wikipedia.rs
thirtyfour/src/: action_chain.rs  alert.rs  error.rs  lib.rs  support.rs  switch_to.rs  web_driver.rs  web_driver_process.rs  web_element.rs
thirtyfour/src/bidi/: capabilities.rs  command.rs  error.rs  events.rs  handle.rs  ids.rs  macros.rs  mod.rs  stream.rs
thirtyfour/src/bidi/modules/: browser.rs  browsing_context.rs  emulation.rs  input.rs  log.rs  mod.rs  network.rs  permissions.rs  script.rs  session.rs  storage.rs  web_extension.rs
thirtyfour/src/bidi/transport/: mod.rs  ws.rs
thirtyfour/src/cdp/: capabilities.rs  command.rs  error.rs  events.rs  handle.rs  ids.rs  macros.rs  mod.rs  session.rs  stream.rs  tests.rs
thirtyfour/src/cdp/domains/: browser.rs  dom.rs  emulation.rs  fetch.rs  input.rs  log.rs  mod.rs  network.rs  page.rs  performance.rs  runtime.rs  storage.rs  target.rs
thirtyfour/src/cdp/transport/: http.rs  mod.rs  ws.rs
thirtyfour/src/common/: command.rs  config.rs  cookie.rs  log.rs  mod.rs  print.rs  protocol.rs  types.rs
thirtyfour/src/common/capabilities/: chrome.rs  chromium.rs  desiredcapabilities.rs  edge.rs  firefox.rs  ie.rs  opera.rs  safari.rs
thirtyfour/src/components/: select.rs
thirtyfour/src/components/wrapper/: resolver.rs
thirtyfour/src/extensions/: mod.rs
thirtyfour/src/extensions/addons/firefox/: firefoxcommand.rs  firefoxtools.rs
thirtyfour/src/extensions/cdp/: chromecommand.rs  devtools.rs  mod.rs  networkconditions.rs
thirtyfour/src/extensions/query/: conditions.rs  element_query.rs  element_waiter.rs  mod.rs
thirtyfour/src/manager/: browser.rs  download.rs  error.rs  manager.rs  mod.rs  process.rs  status.rs  tests.rs  version.rs
thirtyfour/src/session/: create.rs  handle.rs  http.rs  mod.rs  scriptret.rs
thirtyfour/src/testing/: artifacts.rs  mod.rs  runner.rs
thirtyfour/src/testing/artifacts/: tests.rs
thirtyfour/tests/: bidi_events.rs  bidi_typed.rs  cdp_events.rs  cdp_typed.rs  common.rs  components.rs  elements.rs  helpers.rs  managed.rs  misc.rs  query_filters.rs  window.rs
