[package]
name = "thirtyfour-macros"
version = "0.2.0"
edition = "2021"
description = """
Thirtyfour is a Selenium / WebDriver library for Rust, for automated website UI testing.
"""
documentation = "https://docs.rs/thirtyfour_macros"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
