[package]
name = "thirtyfour"
version = "0.36.2"
edition = "2024"
description = """
Thirtyfour is a Selenium / WebDriver library for Rust, for automated website UI testing.

Tested on Chrome and Firefox, but any webdriver-capable browser should work.
"""
documentation = "https://docs.rs/thirtyfour"
readme = "README.md"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["reqwest", "rustls", "component", "manager"]
reqwest = ["dep:reqwest"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
tokio-multi-threaded = ["tokio/rt-multi-thread"]
component = ["thirtyfour-macros"]
debug_sync_quit = []
# Auto-download and lifetime-manage local chromedriver / geckodriver processes.
# Pulls in archive-extraction and cache-dir deps. See `thirtyfour::manager`.
manager = [
    "reqwest",
    "reqwest/stream",
    "tokio/fs",
    "tokio/process",
    "dep:dirs",
    "dep:fs4",
    "dep:zip",
    "dep:flate2",
    "dep:tar",
]
# Enable the manager's end-to-end integration tests (under tests/managed.rs).
# Off by default — the tests download a real driver and spawn a subprocess, so
# they should only run in a CI job that doesn't pre-start a driver.
manager-tests = ["manager"]


[dependencies]
arc-swap = "1"
async-trait = "0.1.83"
base64 = "0.22"
bytes = "1"
cfg-if = "1.0.0"
const_format = "0.2.33"
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
http = "1"
indexmap = "2"
pastey = "0.2"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
serde_repr = "0.1.19"
stringmatch = "0.4"
thirtyfour-macros = { path = "../thirtyfour-macros", version = "0.2.0", optional = true }
thiserror = "2.0.12"
tokio = { version = "1.30", features = [
    "rt",
    "macros",
    "time",
    "io-util",
    "sync",
] }
tracing = "0.1"
url = "2.5.2"

# Optional HTTP client. Not needed if you supply your own.
reqwest = { version = "0.13", default-features = false, features = [
    "json",
], optional = true }

# Optional dependencies pulled in by the `manager` feature.
dirs = { version = "6", optional = true }
fs4 = { version = "1.1", default-features = false, features = ["tokio"], optional = true }
zip = { version = "8", default-features = false, features = ["deflate"], optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

[dev-dependencies]
assert_matches = "1.5"
axum = "0.8"
color-eyre = "0.6"
rstest = { version = "0.26", default-features = false }
serial_test = "3.2.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.6"
tempfile = "3"

[[example]]
name = "tokio_async"

[[example]]
name = "tokio_basic"

[[example]]
name = "selenium_example"

[[example]]
name = "minimal_async"
required-features = ["manager"]

[[example]]
name = "chrome_devtools"

[[example]]
name = "chrome_options"

[[example]]
name = "wikipedia"
path = "examples/query/wikipedia.rs"

[[example]]
name = "custom_poller"
path = "examples/query/custom_poller.rs"

[[example]]
name = "firefox_preferences"
path = "examples/firefox_preferences.rs"

[[example]]
name = "shadowroot"

[[example]]
name = "playground"
path = "examples/components/playground.rs"
